--- a/css/main.css
+++ b/css/main.css
@@ -468,10 +468,13 @@ input:-ms-input-placeholder { color:    #276332;}
 }
 .page-info .type {
 	height: 40px;
+	padding: 0px;
+	margin: 0px;
 }
 .page-info .type p {
-	height: 30px;
-	padding-top: 0px;
+	height: 40px;
+	padding: 0px;
+	margin: 0px;
 }
 .page-info .typeInfoText {
 	margin: 10px 30px 10px 20px;
