--- a/css/main.css
+++ b/css/main.css
@@ -470,6 +470,7 @@ input:-ms-input-placeholder { color:    #276332;}
 }
 .page-info .type {
 	height: 55px;
+	line-height: 55px;
 	padding: 0px;
 	margin: 0px 0px 0px 0px;
 }
