--- a/css/main.css
+++ b/css/main.css
@@ -467,15 +467,17 @@ input:-ms-input-placeholder { color:    #276332;}
 }
 .page-info .type {
 	height: 55px;
-	line-height: 55px;
 	padding: 0px;
 	margin: 0px 0px 0px 0px;
 }
-.page-info .type p {
+.page-info .type > p {
+	line-height: 55px;
+	height: auto;
+	width: auto;
 	padding: 0px;
 	margin: 0px;
 }
-.page-info .typeName {
+.page-info .type p.typeName {
 	margin-left: 20px;
 }
 .page-info .typeInfoText {
