--- a/css/main.css
+++ b/css/main.css
@@ -478,7 +478,10 @@ input:-ms-input-placeholder { color:    #276332;}
 	margin: 0px;
 }
 .page-info .type p.typeName {
-	margin-left: 20px;
+	margin-left: 10px;
+}
+.page-info .type p.typeinfoButton {
+	margin-left: 10px;
 }
 .page-info .typeInfoText {
 	margin: 10px 30px 10px 20px;
