--- a/css/main.css
+++ b/css/main.css
@@ -478,6 +478,9 @@ input:-ms-input-placeholder { color:    #276332;}
 	margin: 0px;
 	margin-left: 10px;
 }
+.page-info .typeInfoButton {
+	width: 24px;
+}
 .page-info .typeInfoText {
 	margin: 10px 30px 10px 20px;
 	padding: 10px;
