--- a/css/main.css
+++ b/css/main.css
@@ -476,6 +476,9 @@ input:-ms-input-placeholder { color:    #276332;}
 .page-info .type.open .typeName {
 	float: none !important;
 }
+.page-info .type.open .typeInfoText {
+	float: none !important;
+}
 .page-info .type p.typeName {
 	line-height: 46px;
 	height: auto;
