--- a/css/main.css
+++ b/css/main.css
@@ -482,7 +482,7 @@ input:-ms-input-placeholder { color:    #276332;}
 .page-info .type p.typeName {
 	line-height: 46px;
 	height: auto;
-	width: auto;
+	width: 80%;
 	padding: 0px;
 	margin: 0px;
 	margin-left: 10px;
