--- a/css/main.css
+++ b/css/main.css
@@ -492,6 +492,7 @@ input:-ms-input-placeholder { color:    #276332;}
 }
 .page-info .typeInfoButton {
 	float:right;
+	margin: 0px;
 	width: 42px;
 	height: 42px;
 }
