--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ textarea {
 	text-shadow: 0px -1px #000;	
 }
 
-.page-select #info, .page-info #info {
+.page-select #info {
 	font-style:italic;
 	margin:10px;
 	text-align: center;
@@ -451,36 +451,12 @@ input:-ms-input-placeholder { color:    #276332;}
 	color:#D2FFB4;
 	text-decoration:none;
 }
-
-.page-info .category {
-	height: 42px;
-	width: 300px;
-}
 .page-info .categoryToggle {
 
 }
 .page-info .categoryName {
 	width: 258px;
 }
-.page-info .types {
-	width:300px;
-	margin-bottom: 35px;
-}
-.page-info .type {
-	width:300px;
-	height: 42px;
-	padding: 0px;
-	margin: 0px 0px 0px 0px;
-}
-/*.page-info .type.open {
-	height: auto !important;
-}
-.page-info .typeName {
-	float: none !important;
-}
-.page-info .type.open .typeInfoText {
-	float: none !important;
-}*/
 .page-info .type p.typeName {
 	float:left;
 	height: 42px;
