--- a/css/main.css
+++ b/css/main.css
@@ -151,17 +151,13 @@ textarea {
 }
 
 
-.page-select .typeName, .page-info .typeName {
+.page-select .typeName {
 	float: left;
 	width:236px;
 	height:22px;
 	cursor:pointer;
 	padding-top: 10px;
 	padding-bottom: 10px;
-}
-.page-info .typeName {
-	padding-top: 15px;
-	padding-bottom: 5px;
 }
 
 .page-select .typeInfoButton, .page-info .typeInfoButton {
@@ -463,9 +459,10 @@ input:-ms-input-placeholder { color:    #276332;}
 }
 .page-info .type p.typeName {
 	float:left;
-	height: 42px;
+	height: 22px;
 	width: 200px;
-	padding: 0px;
+	padding-top:10px;
+	padding-bottom:10px;
 	margin: 0px;
 	margin-left: 42px;
 }
