--- a/css/main.css
+++ b/css/main.css
@@ -147,8 +147,8 @@ textarea {
 }
 
 .page-select .typeCheckbox {
-	height: 32px;
-	width: 32px;
+	height: 22px;
+	width: 22px;
 }
 
 
@@ -194,6 +194,7 @@ textarea {
 	width:270px;
 	padding-right:10px;
 	background:rgba(0,0,0,0.2);
+	margin-left:-10px;
 	border-top: 1px solid rgba(0,0,0,.3);
 	border-bottom: 1px solid rgba(166,256,231,.3);
 }
