--- a/css/main.css
+++ b/css/main.css
@@ -216,7 +216,7 @@ textarea {
 	font-style:italic;
 	margin:10px;
 	text-align: center;
-}		
+}
 
 .page-select #searchButton {
 	float: left;
@@ -358,6 +358,11 @@ Describes button text/image positions (using a paragraph block)
 	font-family: Helvetica, Sans-Serif;
 	color:#D2FFB4;
 	text-shadow: 0px -1px #000;
+}
+.page-info #info {
+	font-style:italic;
+	margin:10px;
+	text-align: center;
 }
 .page-info .nametitle, .page-info .addresstitle, .page-info .outletypestitle, .page-info .outletypestitle, .page-info .phonetitle, .page-info .openhourstitle {
 	font-weight:bold;
