--- a/css/main.css
+++ b/css/main.css
@@ -360,6 +360,7 @@ Describes button text/image positions (using a paragraph block)
 	text-shadow: 0px -1px #000;
 }
 .page-info #info {
+	width:300px;
 	font-style:italic;
 	margin:10px;
 	text-align: center;
