--- a/css/main.css
+++ b/css/main.css
@@ -257,7 +257,6 @@ textarea {
     width: 100%;
     height: 100%;
 }
-
 .page-map #MapContainer a,#MapContainer a:visited,#MapContainer a:hover{
 	color: #333;
 	text-decoration:underline;
@@ -307,6 +306,10 @@ textarea {
 	position:absolute;
 	bottom:10px;
 	left:50%;
+}
+.page-map a, .page-map a:hover, .page-map a:visited{
+	color:#D2FFB4;
+	text-decoration:none;
 }
 
 /*
@@ -369,7 +372,6 @@ Describes button text/image positions (using a paragraph block)
 	font-weight:bold;
 	padding-left:10px;
 }
-
 .page-info .name, .page-info .phone, .page-info .openhours, .page-info .address {
 	padding-left:30px;
 }
