--- a/css/main.css
+++ b/css/main.css
@@ -432,6 +432,10 @@ Describes button text/image positions (using a paragraph block)
 	font-size:16px;
 	text-decoration: none;
 }
+.page-info #ButtonBack p{
+	position:relative;
+	top:8px;
+}
 
 /* ==========================================================================
 
