--- a/css/main.css
+++ b/css/main.css
@@ -147,7 +147,7 @@ textarea {
 	margin:0 auto;
 	margin-bottom:10px;
 }
-.lt-ie9 .page-home #GeoCode{
+.gtie9 .page-home #GeoCode{
 	width:300px;
 }
 .page-home #geoCodeInput input {
@@ -169,7 +169,7 @@ textarea {
 	font-size:14px;
 	font-weight:;
 }
-.lt-ie9 .page-home #geoCodeInput input {
+.gtie9 .page-home #geoCodeInput input {
 	padding:0px;
 }
 /* Changes the color of the placegolder text*/
