--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,8 @@ textarea {
 .page-home .main {
 	width:320px;
 	margin:0 auto;
-	text-align: center;	
+	text-align: center;
+	margin-bottom:50px;
 }
 .page-home #logo {
 	margin-top:40px;
@@ -464,6 +465,7 @@ Describes button text/image positions (using a paragraph block)
 	margin:0 auto;
 	text-align: center;
 	text-shadow: 0px -1px #000;
+	margin-bottom:50px;
 }
 .page-help ul,.page-help p {
 	text-align:left;
