--- a/css/main.css
+++ b/css/main.css
@@ -81,7 +81,7 @@ textarea {
 	width:320px;
 	margin:0 auto;
 	text-align: center;
-	margin-bottom:50px;
+	padding-bottom:50px;
 }
 .page-home #logo {
 	margin-top:40px;
@@ -217,7 +217,7 @@ textarea {
 	font-family: Helvetica, Sans-Serif;
 	color:#D2FFB4;
 	text-shadow: 0px -1px #000;	
-	margin-bottom:50px;
+	padding-bottom:50px;
 }
 
 .page-select #info {
@@ -368,7 +368,7 @@ Describes button text/image positions (using a paragraph block)
 	font-family: Helvetica, Sans-Serif;
 	color:#D2FFB4;
 	text-shadow: 0px -1px #000;
-	margin-bottom:50px;
+	padding-bottom:50px;
 }
 .page-info .info {
 	width:300px;
@@ -465,7 +465,7 @@ Describes button text/image positions (using a paragraph block)
 	margin:0 auto;
 	text-align: center;
 	text-shadow: 0px -1px #000;
-	margin-bottom:50px;
+	padding-bottom:50px;
 }
 .page-help ul,.page-help p {
 	text-align:left;
