Testing what happens when I add buttons to the types

--- a/css/main.css
+++ b/css/main.css
@@ -641,6 +641,9 @@ Describes button text/image positions (using a paragraph block)
 	margin:0px;
 	padding:0px;
 }
+.page-select .type {
+	margin-bottom:10px;
+}
 .page-select .typeCheckboxP {
 	float: left;
 	width:42px;
@@ -654,11 +657,13 @@ Describes button text/image positions (using a paragraph block)
 }
 .page-select .typeName {
 	float: left;
-	width:236px;
+	width:234px;
 	height:22px;
 	cursor:pointer;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	border-left: 1px solid rgba(0,0,0,.3);
+	text-align:right;
 }
 .page-select .typeInfoButton, .page-info .typeInfoButton {
 	float: left;
@@ -670,6 +675,7 @@ Describes button text/image positions (using a paragraph block)
 	padding-top: 10px;
 	width:42px;
 	height:32px;
+	border-left: 1px solid rgba(166,256,231,.3);
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
 	-khtml-user-select: none;
